<resources>
    <string name="app_name">SoccerFantasy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_browse_fragment">Hello browse fragment</string>
    <string name="hello_leagues_fragment">Hello leagues fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register" />
    <string name="logout" />
    <string name="enter_login_information">Enter Login Information</string>
    <string name="login_hint">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_leagues">My Leagues</string>
    <string name="browse_leagues">Browse Leagues</string>
    <string name="home">Home</string>
    <string name="myleague">MyLeague</string>
    <string name="myteam">MyTeam</string>
    <string name="my_teams">My Teams</string>
    <string name="join_league">Join League</string>
    <string name="create_league">Create League</string>
    <string name="available">Available</string>
    <string name="position">Position</string>
    <string name="player_name">Player Name</string>
    <string name="generate_league_matchups">Generate League Matchups</string>
    <string name="start_draft">Start Draft</string>
</resources>